--- a/visualization/index.html
+++ b/visualization/index.html
@@ -10554,6 +10554,8 @@
         // ========================================
 
         // Cross-Atlas: Signature Correlation Matrix
+        // Shows pairwise correlations between signatures across all atlases
+        // CytoSig: 43 signatures, SecAct: top 200 most variable signatures
         function updateSignatureCorrelation() {
             const matrixContainer = document.getElementById('sigcorr-matrix');
             const modulesContainer = document.getElementById('sigcorr-modules');
@@ -10565,78 +10567,89 @@
             const method = document.getElementById('sigcorr-method')?.value || 'spearman';
             const atlasFilter = document.getElementById('sigcorr-atlas')?.value || 'all';
 
-            // Use real correlation data if available
+            // Use real correlation data based on signature type
             const corrData = state.data.crossatlas?.correlation;
-            let cytokines, corrMatrix, modules;
+            let signatures, corrMatrix, modules, nSamples;
 
-            if (corrData && corrData.matrix && corrData.signatures) {
-                cytokines = corrData.signatures;
+            // Select data based on sigType
+            const typeKey = sigType === 'SecAct' ? 'secact' : 'cytosig';
+            const typeData = corrData?.[typeKey];
+
+            if (typeData && typeData.matrix && typeData.signatures) {
+                signatures = typeData.signatures;
+                corrMatrix = typeData.matrix;
+                modules = typeData.modules || [];
+                nSamples = typeData.n_samples || 0;
+            } else if (corrData && corrData.matrix && corrData.signatures) {
+                // Backward compatibility: use root-level data
+                signatures = corrData.signatures;
                 corrMatrix = corrData.matrix;
                 modules = corrData.modules || [];
+                nSamples = 0;
             } else {
-                // Fallback mock data
-                cytokines = ['IFNG', 'TNF', 'IL6', 'IL1B', 'IL10', 'IL17A', 'IL4', 'IL13', 'TGFB1', 'CCL2'];
-
-                const mockModules = {
-                    'inflammatory': ['IFNG', 'TNF', 'IL6', 'IL1B'],
-                    'regulatory': ['IL10', 'TGFB1'],
-                    'th17': ['IL17A'],
-                    'th2': ['IL4', 'IL13']
-                };
-                const getModule = (c) => {
-                    for (const [mod, members] of Object.entries(mockModules)) {
-                        if (members.includes(c)) return mod;
-                    }
-                    return 'other';
-                };
-                corrMatrix = cytokines.map((c1, i) =>
-                    cytokines.map((c2, j) => {
-                        if (i === j) return 1.0;
-                        const mod1 = getModule(c1);
-                        const mod2 = getModule(c2);
-                        const baseCorr = mod1 === mod2 && mod1 !== 'other' ? 0.6 : 0.1;
-                        return baseCorr + (Math.random() - 0.5) * 0.4;
-                    })
-                );
-                modules = Object.entries(mockModules).map(([name, members]) => ({
-                    name, members, color: '#999'
-                }));
+                // Fallback if no data
+                matrixContainer.innerHTML = `<p style="text-align:center; color:#666; padding:2rem;">No ${sigType} correlation data available.</p>`;
+                if (modulesContainer) {
+                    modulesContainer.innerHTML = '';
+                }
+                return;
             }
 
             // 1. Correlation heatmap
             matrixContainer.classList.remove('loading');
             Plotly.purge(matrixContainer);
 
+            const nSigs = signatures.length;
+            const title = sigType === 'SecAct'
+                ? `SecAct Correlation (${nSigs} top variable signatures)`
+                : `CytoSig Correlation (${nSigs} signatures)`;
+
             Plotly.newPlot(matrixContainer, [{
                 type: 'heatmap',
                 z: corrMatrix,
-                x: cytokines,
-                y: cytokines,
-                colorscale: [[0, '#a8d4e6'], [0.5, '#f5f5f5'], [1, '#f4a6a6']],
-                
+                x: signatures,
+                y: signatures,
+                colorscale: [[0, '#2166ac'], [0.5, '#f7f7f7'], [1, '#b2182b']],
                 zmid: 0,
                 zmin: -1,
                 zmax: 1,
-                colorbar: { title: 'Spearman ρ' },
+                colorbar: { title: 'Spearman ρ', len: 0.8 },
                 hovertemplate: '<b>%{x} vs %{y}</b><br>r = %{z:.3f}<extra></extra>'
             }], {
-                margin: { l: 80, r: 50, t: 30, b: 80 },
-                xaxis: { tickangle: 45 },
-                height: 500
+                title: { text: title, font: { size: 14 } },
+                margin: { l: 100, r: 50, t: 50, b: 100 },
+                xaxis: { tickangle: 45, tickfont: { size: nSigs > 50 ? 6 : 10 } },
+                yaxis: { tickfont: { size: nSigs > 50 ? 6 : 10 } },
+                height: 550
             }, { responsive: true });
 
             // 2. Modules summary
             if (modulesContainer) {
                 modulesContainer.classList.remove('loading');
 
-                let html = '<div style="padding: 1rem;"><h4 style="margin-top: 0;">Identified Modules</h4>';
+                let html = `<div style="padding: 1rem;">
+                    <h4 style="margin-top: 0;">Identified Co-regulation Modules</h4>
+                    <p style="color: #666; font-size: 0.85rem; margin-bottom: 1rem;">
+                        ${modules.length} modules identified from ${nSigs} signatures (${nSamples.toLocaleString()} samples across atlases)
+                    </p>`;
+
                 modules.forEach(mod => {
+                    const memberList = mod.members.length > 10
+                        ? mod.members.slice(0, 10).join(', ') + ` ... (+${mod.members.length - 10} more)`
+                        : mod.members.join(', ');
+                    const meanCorr = mod.mean_correlation !== undefined
+                        ? ` (mean r=${mod.mean_correlation.toFixed(2)})`
+                        : '';
+
                     html += `<div style="margin-bottom: 0.8rem;">
-                        <span class="badge" style="background: ${mod.color || '#999'}; color: white;">${mod.name.toUpperCase()}</span>
-                        <span style="margin-left: 0.5rem; font-size: 0.9rem;">${mod.members.join(', ')}</span>
+                        <span class="badge" style="background: ${mod.color || '#999'}; color: white; font-size: 0.75rem;">
+                            ${mod.name.toUpperCase()}${meanCorr}
+                        </span>
+                        <span style="margin-left: 0.5rem; font-size: 0.85rem; color: #555;">${memberList}</span>
                     </div>`;
                 });
-                html += '<p style="color: #666; font-size: 0.85rem; margin-top: 1rem;">Modules identified by hierarchical clustering (Ward linkage).</p></div>';
+
+                html += '<p style="color: #888; font-size: 0.8rem; margin-top: 1rem; font-style: italic;">Modules identified by hierarchical clustering (Ward linkage) on cross-atlas activity data.</p></div>';
                 modulesContainer.innerHTML = html;
             }
         }
