Add scAtlas pseudobulk and enable all atlas comparisons
- Add generate_scatlas_pseudobulk.py to create pseudobulk from scAtlas
  - Filters to Immune compartment (500K cells sampled)
  - Groups by cellType1 × sampleID (1909 pseudobulk samples, 161 cell types)
  - Generates both CytoSig and SecAct activity h5ad files

- Add cellType1 to coarse lineage mapping for scAtlas (90+ mappings)
  - Maps diverse cell type names to 8 coarse lineages
  - Handles variations like "B cell", "B Cell CD79A", "bcells", etc.

- Enable CIMA vs scAtlas and Inflammation vs scAtlas comparisons
  - Lower correlations expected due to tissue context differences:
    - CIMA/Inflammation: blood samples, r=0.84-0.91
    - vs scAtlas: normal tissues, r=0.10-0.24

Results:
- CytoSig CIMA vs scAtlas: r=0.099
- CytoSig Inflammation vs scAtlas: r=0.162
- SecAct CIMA vs scAtlas: r=0.143
- SecAct Inflammation vs scAtlas: r=0.242

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2304,8 +2304,8 @@
                         <label>Atlas Pair</label>
                         <select id="atlas-comparison-type">
                             <option value="cima-inflam">CIMA vs Inflammation Atlas</option>
-                            <option value="cima-scatlas" disabled>CIMA vs scAtlas (pending)</option>
-                            <option value="inflam-scatlas" disabled>Inflammation vs scAtlas (pending)</option>
+                            <option value="cima-scatlas">CIMA vs scAtlas (Normal)</option>
+                            <option value="inflam-scatlas">Inflammation vs scAtlas (Normal)</option>
                         </select>
                     </div>
                     <div class="control-group">
