--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2325,7 +2325,7 @@
                     <div class="control-group">
                         <label>View</label>
                         <select id="atlas-comp-view">
-                            <option value="scatter">Scatter Plot</option>
+                            <option value="scatter">Cell Type Aggregated</option>
                             <option value="resampled">Bootstrap CIs</option>
                             <option value="concordance">Prediction Concordance</option>
                         </select>
@@ -2339,8 +2339,8 @@
                         <div id="atlas-scatter" class="loading" style="height: 450px;">Loading...</div>
                     </div>
                     <div class="viz-container" style="min-height: 500px;">
-                        <div class="viz-title" id="atlas-diff-title">Differential Signatures</div>
-                        <div class="viz-subtitle" id="atlas-diff-subtitle">Context-dependent activity changes</div>
+                        <div class="viz-title" id="atlas-diff-title">Per-Cell Type Correlation</div>
+                        <div class="viz-subtitle" id="atlas-diff-subtitle">Activity correlation breakdown by harmonized cell type</div>
                         <div id="atlas-diff-bar" class="loading" style="height: 450px;">Loading...</div>
                     </div>
                 </div>
@@ -10102,10 +10102,10 @@
             const diffSubtitle = document.getElementById('atlas-diff-subtitle');
 
             if (viewType === 'scatter') {
-                if (scatterTitle) scatterTitle.textContent = 'Cross-Atlas Scatter';
-                if (scatterSubtitle) scatterSubtitle.textContent = `${level === 'coarse' ? 'Coarse' : 'Fine'} cell type aggregated activity correlation`;
-                if (diffTitle) diffTitle.textContent = 'Differential Signatures';
-                if (diffSubtitle) diffSubtitle.textContent = 'Signatures with largest activity differences between atlases';
+                if (scatterTitle) scatterTitle.textContent = 'Cell Type Aggregated Activity';
+                if (scatterSubtitle) scatterSubtitle.textContent = `${level === 'coarse' ? 'Coarse (8 lineages)' : 'Fine (~21 types)'}: Mean activity per cell type`;
+                if (diffTitle) diffTitle.textContent = 'Per-Cell Type Correlation';
+                if (diffSubtitle) diffSubtitle.textContent = 'Cross-atlas correlation breakdown by harmonized cell type';
             } else if (viewType === 'resampled') {
                 if (scatterTitle) scatterTitle.textContent = 'Bootstrap Confidence Intervals';
                 if (scatterSubtitle) scatterSubtitle.textContent = 'Activity differences with 95% CI from pseudobulk resampling';
@@ -10197,42 +10197,86 @@
                 }, { responsive: true });
             }
 
-            // Render differential bar
+            // Render per-cell-type correlation breakdown
             if (container2) {
                 container2.classList.remove('loading');
                 Plotly.purge(container2);
 
-                // Get unique signatures with largest differences
-                const sigDiffs = {};
+                // Group data by cell type and compute per-type correlation
+                const cellTypeGroups = {};
                 plotData.forEach(d => {
-                    const diff = d.y - d.x;
-                    if (!sigDiffs[d.signature] || Math.abs(diff) > Math.abs(sigDiffs[d.signature].diff)) {
-                        sigDiffs[d.signature] = { signature: d.signature, diff, cell_type: d.cell_type };
+                    if (!cellTypeGroups[d.cell_type]) {
+                        cellTypeGroups[d.cell_type] = { x: [], y: [] };
                     }
+                    cellTypeGroups[d.cell_type].x.push(d.x);
+                    cellTypeGroups[d.cell_type].y.push(d.y);
                 });
-                const uniqueDiffs = Object.values(sigDiffs).sort((a, b) => b.diff - a.diff);
-                const top8 = uniqueDiffs.slice(0, 8);
-                const bottom8 = uniqueDiffs.slice(-8).reverse();
-                const display = [...top8, ...bottom8];
+
+                // Compute Spearman correlation for each cell type
+                const cellTypeCorr = Object.entries(cellTypeGroups).map(([cellType, data]) => {
+                    // Simple Pearson correlation (approximation for visualization)
+                    const n = data.x.length;
+                    if (n < 3) return { cellType, correlation: null, n };
+
+                    const meanX = data.x.reduce((a, b) => a + b, 0) / n;
+                    const meanY = data.y.reduce((a, b) => a + b, 0) / n;
+                    let num = 0, denX = 0, denY = 0;
+                    for (let i = 0; i < n; i++) {
+                        const dx = data.x[i] - meanX;
+                        const dy = data.y[i] - meanY;
+                        num += dx * dy;
+                        denX += dx * dx;
+                        denY += dy * dy;
+                    }
+                    const correlation = denX * denY > 0 ? num / Math.sqrt(denX * denY) : 0;
+                    return { cellType, correlation, n };
+                }).filter(d => d.correlation !== null);
+
+                // Sort by correlation
+                cellTypeCorr.sort((a, b) => b.correlation - a.correlation);
+
+                const colors = cellTypeCorr.map(d => {
+                    const r = d.correlation;
+                    if (r >= 0.7) return '#1a9850';
+                    if (r >= 0.5) return '#91cf60';
+                    if (r >= 0.3) return '#d9ef8b';
+                    if (r >= 0) return '#fee08b';
+                    return '#d73027';
+                });
 
                 Plotly.newPlot(container2, [{
                     type: 'bar',
                     orientation: 'h',
-                    y: display.map(d => d.signature),
-                    x: display.map(d => d.diff),
-                    marker: { color: display.map(d => d.diff > 0 ? '#d62728' : '#2ca02c') },
-                    text: display.map(d => d.diff.toFixed(2)),
-                    textposition: 'auto',
-                    hovertemplate: '<b>%{y}</b><br>Δ Activity: %{x:.3f}<extra></extra>'
+                    y: cellTypeCorr.map(d => d.cellType),
+                    x: cellTypeCorr.map(d => d.correlation),
+                    marker: { color: colors },
+                    text: cellTypeCorr.map(d => `r=${d.correlation.toFixed(2)} (n=${d.n})`),
+                    textposition: 'outside',
+                    hovertemplate: '<b>%{y}</b><br>Correlation: %{x:.3f}<br>n=%{customdata}<extra></extra>',
+                    customdata: cellTypeCorr.map(d => d.n)
                 }], {
-                    xaxis: { title: `Δ Activity (${labels.y} − ${labels.x})`, zeroline: true },
+                    xaxis: {
+                        title: 'Pearson Correlation',
+                        range: [-0.2, 1.1],
+                        zeroline: true,
+                        zerolinecolor: '#ccc'
+                    },
                     yaxis: { automargin: true },
-                    margin: { l: 100, r: 30, t: 40, b: 50 },
+                    margin: { l: 100, r: 80, t: 40, b: 50 },
                     height: 430,
+                    shapes: [{
+                        type: 'line',
+                        x0: 0.7, x1: 0.7,
+                        y0: -0.5, y1: cellTypeCorr.length - 0.5,
+                        line: { dash: 'dash', color: '#1a9850', width: 1 }
+                    }],
                     annotations: [{
-                        x: 0.5, y: 1.06, xref: 'paper', yref: 'paper',
-                        text: `<span style="color:#d62728">↑ ${labels.y}</span> | <span style="color:#2ca02c">↓ ${labels.x}</span>`,
-                        showarrow: false, font: { size: 10 }
+                        x: 0.7, y: cellTypeCorr.length - 0.5,
+                        text: 'Good (r≥0.7)',
+                        showarrow: false,
+                        font: { size: 9, color: '#1a9850' },
+                        xanchor: 'left',
+                        yanchor: 'bottom'
                     }]
                 }, { responsive: true });
             }
