Fix inflammation vs scatlas comparison key mapping
The JavaScript was using 'inflam_vs_scatlas' but the JSON key is
'inflammation_vs_scatlas', causing the comparison to show no data.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -10076,7 +10076,7 @@
             const compKeyMap = {
                 'cima-inflam': 'cima_vs_inflammation',
                 'cima-scatlas': 'cima_vs_scatlas',
-                'inflam-scatlas': 'inflam_vs_scatlas'
+                'inflam-scatlas': 'inflammation_vs_scatlas'
             };
             const compKey = compKeyMap[atlasSelect] || 'cima_vs_inflammation';
 
