Fix conserved tab data and add SecAct citation
Data fixes:
- Add atlas_means to all signatures (was missing for cell-type agnostic view)
- Use mean values directly instead of boolean flags from conserved data
- Update embedded_data.js with complete signature_reliability data

Citation:
- Add Ru B, et al. (2026) Nature Methods - SecAct paper (in press)

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2639,6 +2639,7 @@
 
             <h3>References</h3>
             <ul>
+                <li>Ru B, Gong L, Yang E, Park S, Zaki G, Aldape K, Wakefield L, Jiang P. (2026) <em>Nature Methods</em> (in press) - Inference of secreted protein activities in intercellular communication</li>
                 <li>Jiang P, et al. (2021) <em>Nature Methods</em> - Systematic investigation of cytokine signaling activity at the tissue and single-cell levels</li>
                 <li>Hao Y, et al. (2021) <em>Cell</em> - Integrated analysis of multimodal single-cell data</li>
                 <li>Higgins JPT, et al. (2003) <em>BMJ</em> - Measuring inconsistency in meta-analyses</li>
