--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2322,12 +2322,19 @@
                     </div>
                 </div>
 
-                <!-- Atlas Pair Overall Correlations -->
-                <div class="viz-container" style="margin-bottom: 1.5rem; padding: 1rem;">
-                    <div class="viz-title" id="conserved-corr-title">Cross-Atlas Correlation Summary</div>
-                    <div class="viz-subtitle" id="conserved-corr-subtitle">Overall activity pattern correlation between atlas pairs</div>
-                    <div id="conserved-pair-correlations" style="display: flex; gap: 2rem; justify-content: center; flex-wrap: wrap; margin-top: 1rem;">
-                        <!-- Filled by JS -->
+                <!-- Two-column layout: Correlation Summary + Category Distribution -->
+                <div class="two-col" style="margin-bottom: 1.5rem;">
+                    <div class="viz-container" style="padding: 1rem;">
+                        <div class="viz-title" id="conserved-corr-title">Cross-Atlas Correlation Summary</div>
+                        <div class="viz-subtitle" id="conserved-corr-subtitle">Overall activity pattern correlation between atlas pairs</div>
+                        <div id="conserved-pair-correlations" style="display: flex; gap: 1.5rem; justify-content: center; flex-wrap: wrap; margin-top: 1rem;">
+                            <!-- Filled by JS -->
+                        </div>
+                    </div>
+                    <div class="viz-container" style="padding: 1rem;">
+                        <div class="viz-title">Conservation Category Distribution</div>
+                        <div class="viz-subtitle">Breakdown of signatures by cross-atlas reliability</div>
+                        <div id="conserved-category-chart" style="height: 180px;">Loading...</div>
                     </div>
                 </div>
 
@@ -10109,6 +10116,35 @@
                     }
                     pairCorrelationsContainer.innerHTML = pairHtml;
                 }
+            }
+
+            // Render category distribution chart
+            const categoryChartContainer = document.getElementById('conserved-category-chart');
+            if (categoryChartContainer) {
+                Plotly.purge(categoryChartContainer);
+                const categories = ['Highly Conserved', 'Moderate', 'Atlas-Specific', 'Limited Data'];
+                const values = [
+                    summary.highly_conserved || 0,
+                    summary.moderately_conserved || 0,
+                    summary.atlas_specific || 0,
+                    summary.insufficient_data || 0
+                ];
+                const colors = ['#2e7d32', '#e65100', '#c2185b', '#9e9e9e'];
+
+                Plotly.newPlot(categoryChartContainer, [{
+                    type: 'bar',
+                    x: categories,
+                    y: values,
+                    marker: { color: colors },
+                    text: values.map(v => v.toString()),
+                    textposition: 'outside',
+                    hovertemplate: '<b>%{x}</b><br>%{y} signatures<extra></extra>'
+                }], {
+                    margin: { t: 10, b: 50, l: 40, r: 20 },
+                    yaxis: { title: 'Count', rangemode: 'tozero' },
+                    xaxis: { tickangle: -20 },
+                    height: 180
+                }, { responsive: true, displayModeBar: false });
             }
 
             // Filter signatures
